[project]
name = "zhihu-circle-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
]
